--- a/EduStyle.css
+++ b/EduStyle.css
@@ -14,13 +14,15 @@ header{
 main{
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    padding: 20px;
+    padding: 75px;
     background-image: url(https://cdn.wallpapersafari.com/26/10/lV9LYT.jpg);
     background-size:cover;
     background-position-y: bottom;
-    background-blend-mode:lighten;
-    background-repeat: repeat-y
-    b    
+    background-repeat: repeat-y;
+}
+
+.info{
+    font-size: large;
 }
 
 h1{
@@ -33,6 +35,11 @@ hr{
     height: 2px;
 }
 
-.institutions{
-    background-color:#e78f8e;
+.edulevel{
+    background-color:#b8afaf;
+    color:black
+}
+
+p, .cert{
+    font-size:medium;
 }
