CSS of education page done

--- a/EduStyle.css
+++ b/EduStyle.css
@@ -14,15 +14,17 @@ header{
 main{
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    padding: 75px;
+    padding: 125px;
+    width:1200px;
     background-image: url(https://cdn.wallpapersafari.com/26/10/lV9LYT.jpg);
     background-size:cover;
-    background-position-y: bottom;
+    background-position-x: 50px;
     background-repeat: repeat-y;
 }
 
 .info{
     font-size: large;
+    text-align: left;
 }
 
 h1{
