--- a/EduStyle.css
+++ b/EduStyle.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #F2CCC3
+    background-color: #F2CCC3;
 }
 
 header{
@@ -12,24 +12,25 @@ header{
 }
 
 main{
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    padding: 125px;
-    width:1200px;
     background-image: url(https://cdn.wallpapersafari.com/26/10/lV9LYT.jpg);
-    background-size:cover;
-    background-position-x: 50px;
+    background-size: 45cm;
+    background-position-x: 8px;
     background-repeat: repeat-y;
 }
 
 .info{
     font-size: large;
     text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding-left : 75px;
+    padding-bottom: 75px;
 }
 
-h1{
-    font-size: xx-large;
-    font-weight:500px;
+.tit{
+    text-shadow: black;
+    font-size: 0.6in;
+    padding-top: 50px;
 }
 
 hr{
@@ -44,4 +45,9 @@ hr{
 
 p, .cert{
     font-size:medium;
+}
+
+a{
+    color: black;
+    padding: 10px;
 }
