--- a/Homestyle.css
+++ b/Homestyle.css
@@ -5,8 +5,31 @@ h2{
 
 h1{
     text-align:center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
+
 body{
-    background-color: #ffe6e8;
+    background-color: #acd8aa;
+}
+
+header{
+    color: aliceblue;
+    background-image: url(https://images.unsplash.com/photo-1522199755839-a2bacb67c546?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cG9ydGZvbGlvfGVufDB8fDB8fA%3D%3D&w=1000&q=80);
+    background-size: 19cm;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+p{
+    font-size: large;
+    padding: 50px;
+}
+
+hr{
+    background-color: rgb(255, 255, 255);
+    height: 2px;
+}
+
+main{
+    text-align: right;
 }
