--- a/ExpStyle.css
+++ b/ExpStyle.css
@@ -4,6 +4,7 @@ a{
 }
 
 header{
+    color:black;
     text-align: center;
 }
 
@@ -11,4 +12,36 @@ header{
     background-color: burlywood;
     font-style: italic;
     display: inline-block;
+}
+
+body{
+    background-color: #051923;
+}
+
+.exp{
+    font-size:xx-large;
+}
+
+h2 span, p span{
+    background-color: rgba(0,0,0,0.5);
+}
+
+main{
+    color: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,  url(https://www.clarityupgrades.be/wp-content/uploads/2019/11/brand-performance.jpg);
+    background-position-x: center;
+    background-repeat: repeat-y;
+    background-size: cover;
+    margin-top: 2cm;
+}
+
+.info{
+    padding-top: 8%;;
+    font-size: large;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding-left : 75px;
+    padding-right : 75px;
+    padding-bottom: 75px;
 }
