--- a/AchStyle.css
+++ b/AchStyle.css
@@ -12,3 +12,11 @@ header{
     font-style: italic;
     display: inline-block;
 }
+
+body{
+    background-color:;
+}
+
+main{
+    background-image: url(https://img.freepik.com/premium-photo/champion-golden-trophy-winner-background-success-achievement-concept_488220-5559.jpg?w=2000);
+}
