--- a/Homestyle.css
+++ b/Homestyle.css
@@ -1,6 +1,7 @@
 h2{
-    text-align: center;
     font-family: Arial;
+    stroke: black;
+    stroke-width: 2px;
 }
 
 h1{
@@ -10,6 +11,7 @@ h1{
 
 body{
     background-color: #acd8aa;
+    margin: 0;
 }
 
 header{
@@ -20,7 +22,7 @@ header{
     background-position-x: center;
 }
 
-p{
+.profile{
     font-size: large;
     padding: 50px;
 }
@@ -30,6 +32,19 @@ hr{
     height: 2px;
 }
 
-main{
-    text-align: right;
+iframe {
+    width: 1200px;
+    height: 1000px;
+    margin: 0;
+    background-image: url(https://images.fineartamerica.com/images-medium-large-5/geometric-hipster-retro-background-my-portfolio.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.name{
+    background-image: url(https://scontent.fhyd14-1.fna.fbcdn.net/v/t39.30808-6/309437440_1928857100646171_1960084684162492860_n.jpg?stp=dst-jpg_p180x540&_nc_cat=103&ccb=1-7&_nc_sid=730e14&_nc_ohc=Tl4WfGog99cAX_47sNO&_nc_ht=scontent.fhyd14-1.fna&oh=00_AT-6C-YIZb3orG8esYxpuxycgFzWt0PKGMzGniObReYMlA&oe=63458025);
+    background-size: 100%;
+    background-position-x: center;
+    width:10cm;
+    background-repeat: no-repeat;
 }
