--- a/SkillStyle.css
+++ b/SkillStyle.css
@@ -6,9 +6,37 @@ a{
 header{
     text-align: center;
 }
+
 .cat{
     text-align: center;
     background-color: burlywood;
     font-style: italic;
     display: inline-block;
+}
+
+body{
+    background-color: #27213c;
+}
+
+main{
+    color: white;
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(https://d-skills.ch/wp-content/uploads/2021/05/Teachers.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 2cm;
+}
+
+.tit{
+    font-size:x-large;
+}
+
+.info{
+    padding-top: 8%;;
+    font-size: large;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding-left : 75px;
+    padding-right : 75px;
+    padding-bottom: 75px;
 }
