--- a/EmbededStyle.css
+++ b/EmbededStyle.css
@@ -1,5 +1,6 @@
 a{
-    color: black;
+    color: rgba(255, 248, 248, 0.8);
+    padding:20px;
 }
 
 header{
@@ -7,7 +8,12 @@ header{
 }
 
 .cat{
-    background-color: burlywood;
+    color:antiquewhite;
     font-style: italic;
     display: inline-block;
+    font-size: 20px;
+}
+
+a:hover{
+    color:yellow;
 }
