--- a/Homestyle.css
+++ b/Homestyle.css
@@ -1,8 +1,3 @@
-h2{
-    stroke: black;
-    stroke-width: 2px;
-}
-
 h1{
     font-family: 'Times New Roman', Times, serif;
     font-size: xx-large;
@@ -12,41 +7,94 @@ h1, h2{
     padding-left: 20px;
 }
 
-body{
+main{
     font-family: Arial;
-    background-color: #020887;
     margin: 0;
+    color: white;
+    padding:50px;
 }
 
-header{
-    color: aliceblue;
-    background-image: url();
-    background-size: 19cm;
+video{
     background-repeat: no-repeat;
+    background-attachment:scroll;
+    background-size: contain;
     background-position-x: center;
+    width:100%;
+    height: 100%;
 }
 
-.profile{
-    font-size: large;
+body{
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.8)), url(https://scontent.fhyd14-1.fna.fbcdn.net/v/t39.30808-6/311321769_1932602693604945_6877769454061968279_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=730e14&_nc_ohc=2cMa6IcFbjQAX8PmdwZ&tn=UN2ItFve6eSWz1Wv&_nc_ht=scontent.fhyd14-1.fna&oh=00_AT9Uk7EEp-QuANjrHjA_CJnAD4Xuo3gMrY5z2ej1au0_ew&oe=634A80DA);
+    background-size: cover;
+    background-position-x: center;
+    margin:0;
+}
+
+#about{
+    font-size: 18px;
     padding: 50px;
+
+}
+
+iframe{
+    background-color: rgba(0,0,0,0.8);
+    background-image:url(#);
+    margin-left: 60px;
+    margin-right: 80px;
 }
 
 hr{
     background-color: rgb(255, 255, 255);
-    height: 2px;
+    height: 10px;
 }
 
-.iframe {
-    padding: 50px;
-    margin-left: 6cm;
-    background-size: contain;
-    background-repeat: no-repeat;
+#contact{
+    width: 50px;
+    padding-left:15px;
+    padding-right:15px;
 }
 
-main{
-    color: white;
+.inside{
+    color:antiquewhite;
+    font-size: 30px;
+    font-style: oblique;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+
+}
+
+div{
+    width:100%;
+    padding-bottom: 35px;
+}
+
+nav{
+    margin-bottom: 200px;
+    background: black;
+    height: 60px;
+    width: 100%;
+    line-height:30px;
+    position:fixed;
+}
+
+#refresh{
+    color:white;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    padding-left: 20px;
+    padding-right:60%;
+    text-decoration:dashed;
+}
+
+#navbar{
+    color:aqua;
+    font-family: 'Lucia Sans';
+    font-size: 10px;
+    padding-right: 7px;
+    padding-left: 7px;
+    text-decoration: none;
 }
 
 a{
-    color:aqua;
+    font-style:oblique;
 }
