--- a/EduStyle.css
+++ b/EduStyle.css
@@ -14,28 +14,26 @@ header{
 }
 
 main{
-    margin-top: 0;
+    margin-top: 1cm;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(https://scontent.fhyd14-2.fna.fbcdn.net/v/t39.30808-6/311406646_1932580860273795_2741643327063199053_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=730e14&_nc_ohc=w-tJKYm4awcAX90ppf6&_nc_oc=AQk6U6f1o9hdndZal1oE9xGemLl64U8hgxQtt8x0IDTHoErUE2IsVeiFfRKx1hwhLNcmW3Gh-pylu_TTPlrOFWpY&_nc_ht=scontent.fhyd14-2.fna&oh=00_AT8WYH-sm1SiK-rg1XpoG2ALUJQEJah8Gvyw2rdqvRsiDA&oe=63493865);
     background-size:cover;
     background-repeat: repeat-y;
-    margin-top: 2cm;
 }
 
 .info{
-    font-size: large;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     padding-left : 75px;
     padding-right : 75px;
     padding-bottom: 75px;
-    padding-top: 50px
+    padding-top: 50px;
+    margin:0;
 }
 
 .tit{
     text-shadow: black;
-    font-size: 0.6in;
-    padding-top: 20px;
+    font-size: 0.5in;
 }
 
 hr{
@@ -59,4 +57,9 @@ p, .cert{
 a{
     color: black;
     padding: 10px;
+}
+
+button{
+    background-color: violet;
+    font-family: 'Arial';
 }
