--- a/EmbededStyle.css
+++ b/EmbededStyle.css
@@ -12,6 +12,8 @@ header{
     font-style: italic;
     display: inline-block;
     font-size: 20px;
+    text-decoration: none;
+    background-color: rgba(255, 248, 248, 0.2);
 }
 
 a:hover{
