--- a/EmbededStyle.css
+++ b/EmbededStyle.css
@@ -13,9 +13,9 @@ header{
     display: inline-block;
     font-size: 20px;
     text-decoration: none;
-    background-color: rgba(255, 248, 248, 0.2);
+    background-color: rgba(115, 118, 118, 0.4);
 }
 
 a:hover{
-    color:yellow;
+    color:black;
 }
