--- a/SkillStyle.css
+++ b/SkillStyle.css
@@ -20,7 +20,7 @@ body{
 
 main{
     color: white;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(https://scontent.fhyd14-2.fna.fbcdn.net/v/t39.30808-6/311021050_1932580803607134_2689494686563700690_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=8phS_uzDyVkAX-CpA7L&tn=UN2ItFve6eSWz1Wv&_nc_ht=scontent.fhyd14-2.fna&oh=00_AT8bNSKDjAnjqAa-v7OZkkJW_vEPhvvlU7ZmB9j5JwlHQw&oe=634A938F);
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(images/skills.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 2cm;
@@ -45,4 +45,5 @@ main{
 button{
     background-color: violet;
     font-family: 'Arial';
+    float: right;
 }
