--- a/Homestyle.css
+++ b/Homestyle.css
@@ -34,7 +34,8 @@ body{
 #about{
     font-size: 18px;
     padding: 70px;
-    color:black;
+    color:white;
+    background-color: rgba(0,0,0,0.5);
 }
 
 iframe{
@@ -60,7 +61,7 @@ hr{
 }
 
 .inside{
-    color:brown;
+    color:burlywood;
     font-size: 30px;
     font-style: italic;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -75,7 +76,7 @@ div{
 
 nav{
     margin-bottom: 200px;
-    background: black;
+    background-color: rgb(19, 4, 4);
     height: 60px;
     width: 100%;
     line-height:30px;
@@ -83,7 +84,7 @@ nav{
 }
 
 #refresh{
-    color:white;
+    color: rgb(255, 153, 0);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
     padding-left: 20px;
