--- a/ProjStyle.css
+++ b/ProjStyle.css
@@ -4,6 +4,7 @@ a{
 }
 
 header{
+    color:black;
     text-align: center;
 }
 
@@ -18,19 +19,18 @@ body{
 }
 
 main{
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/project.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url(images/project.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: center;
     background-position-x: center;
     font-size:large;
     font-family: sans-serif;
-    margin-top:1cm;
     padding-left: 20px;
     padding-right: 20px;
 }
 
-h1 span, h2 span, p span{
+h1 span, h2 span, p span, ul{
     color: white;
     background-color: rgba(0,0,0,0.5);
 }
@@ -38,6 +38,7 @@ h1 span, h2 span, p span{
 h1{
     font-size: 0.5in;
 }
+
 hr{
     width: 100%;
     height: 2px;
