--- a/Homestyle.css
+++ b/Homestyle.css
@@ -1,8 +1,3 @@
-h1{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: xx-large;
-}
-
 h1, h2{
     padding-left: 20px;
 }
@@ -24,9 +19,11 @@ video{
     height: 100%;
 }
 
+
 body{
     background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0)), url(images/background.jpg);
     background-size:cover;
+    font-family: Arial, sans-serif;
     background-position-x: center;
     background-position-y: bottom;
     background-repeat: no-repeat;
@@ -61,20 +58,6 @@ body{
     text-align: center;
 }
 
-.iframe-container {
-    background-image: url(images/Thanks.png);
-    background-position: center;
-    background-position-y: 23%;
-    background-size: 20%;
-    background-repeat: no-repeat;
-    text-align: center;
-    width: 50%;
-    height: 20cm; 
-    max-height:min-content;
-    overflow: hidden;
-    margin-bottom: 0%;
-}
-
 #contact_form{
     height: 90%;
     transform: translateY(-26%);
@@ -90,10 +73,57 @@ hr{
 }
 
 #contact{
+    margin-top: 8%;
+    margin-left: 15%;
+    float: left;
     width: 50px;
     display: inline;
     position:relative;
 }
+
+
+.form-container {
+    font-family: Arial, Helvetica, sans-serif;
+    float: right;
+    margin-top: 0;
+    margin-right: 10%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 500px;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  .form-label {
+    float: left;
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  .form-input {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  .form-submit {
+    background-color: #7a0303;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+    width: 50%;
+  }
+  .form-submit:hover {
+    background-color: indigo;
+    transform: translateY(-3px); /* Add a slight lift effect on hover */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+}
+
 
 div{
     width:100%;
@@ -101,6 +131,7 @@ div{
 }
 
 nav{
+    font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 200px;
     background-color: rgb(19, 4, 4);
     height: 60px;
@@ -118,6 +149,7 @@ nav{
 }
 
 #navbar{
+    font-family: Arial;
     color:aqua;
     font-family: 'Lucia Sans';
     font-size: 15px;
@@ -132,10 +164,16 @@ nav{
 }
 
 a{
+    filter: brightness(80%);
+}
+
+a:hover{
     font-style:oblique;
+    filter: brightness(300%);
 }
 
 #end{
     text-align: center;
     width: 45%;
 }
+
