--- a/Homestyle.css
+++ b/Homestyle.css
@@ -83,6 +83,7 @@ hr{
 
 
 .form-container {
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     float: right;
     margin-top: 0;
