--- a/EmbededStyle.css
+++ b/EmbededStyle.css
@@ -8,10 +8,11 @@ header{
 }
 
 .cat{
+    padding :12px;
     color:antiquewhite;
     font-style: italic;
     display: inline-block;
-    font-size: 20px;
+    font-size: 15px;
     text-decoration: none;
     background-color: rgba(115, 118, 118, 0.4);
 }
