Components and css foldered

--- a/components/Ach2Page.html
+++ b/components/Ach2Page.html
@@ -4,18 +4,18 @@
         <meta charset="utl-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Achievements Page</title>
-        <link href="AchStyle.css" rel="stylesheet" />
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/AchStyle.css" rel="stylesheet" />
+        <link rel="icon" href="../images/logo.png" />
     </head>
     <body>
       <header>
         <nav>
-            <a class="cat" href="ExpPage.html">Experience</a>
-            <a class="cat" href="ProPage.html">Projects</a>
-            <a class="cat" href="EduPage.html">Education</a>
-            <a class="cat" href="SkillsPage.html">Skills</a>
-            <a class="cat" href="HobPage.html">Hobbies</a>
-            <a class="cat" href="AchPage.html">Achievements</a>
+            <a class="cat" href="Exp2Page.html">Experience</a>
+            <a class="cat" href="Pro2Page.html">Projects</a>
+            <a class="cat" href="Edu2Page.html">Education</a>
+            <a class="cat" href="Skills2Page.html">Skills</a>
+            <a class="cat" href="Hob2Page.html">Hobbies</a>
+            <a class="cat" href="Ach2Page.html">Achievements</a>
         </nav>
       </header>
       <main>
@@ -27,7 +27,7 @@
         <p><span>-May 2022<br>
           -participated in a mini event and won.<br>
           -Learnt about quick planning and execution.<br>
-          -Contributed (front-end) in making an application for sharing and selling of NFT's.<br>
+          -Contributed (front-end) in making an application for sharing and selling NFT's.<br>
         </span></p>
         <hr>
         <h4><span><u>Other Achievements</u></span></h4>
@@ -42,11 +42,11 @@
             <br><br>
             <br><br>
             <br>
-        <button type="button"><a href="Ach2Page.html" target="_blank">FULL SCREEN</a></button>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
+        <button type="button"><a href="../Home.html">HOME PAGE</button>
+          <br><br>
+          <br><br>
+          <br><br>
+          <br><br>
         </main>
-      </body>
+        </body>
 </html>
