--- a/components/EduPage.html
+++ b/components/EduPage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="EduStyle.css" rel="stylesheet"/>
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/EduStyle.css" rel="stylesheet"/>
+        <link rel="icon" href="../images/logo.png" />
         <meta charset="utl-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Education Details </title>
