--- a/components/Embeded.html
+++ b/components/Embeded.html
@@ -4,8 +4,8 @@
         <meta charset="utl-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Embeded</title>
-        <link href="EmbededStyle.css" rel="stylesheet" />
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/EmbededStyle.css" rel="stylesheet" />
+        <link rel="icon" href="../images/logo.png" />
     </head>
     <body>
       <header>
