--- a/components/Hob2Page.html
+++ b/components/Hob2Page.html
@@ -4,8 +4,8 @@
         <meta charset="utl-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hobbies Page</title>
-        <link href="HobStyle.css" rel="stylesheet" />
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/HobStyle.css" rel="stylesheet" />
+        <link rel="icon" href="../images/logo.png" />
     </head>
     <body>
       <header>
@@ -34,7 +34,7 @@
                 <br><br>
                 <br><br>
                 <br><br>
-                <button type="button"><a href="Home.html">HOME PAGE</a></button>
+                <button type="button"><a href="../Home.html">HOME PAGE</a></button>
                 <br> <br><br>
                 <br><br>
       </main>
