--- a/components/HobPage.html
+++ b/components/HobPage.html
@@ -4,8 +4,8 @@
     <meta charset="utl-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hobbies Page</title>
-    <link href="HobStyle.css" rel="stylesheet" />
-    <link rel="icon" href="images/logo.png" />
+    <link href="../css/HobStyle.css" rel="stylesheet" />
+    <link rel="icon" href="../images/logo.png" />
   </head>
   <body>
     <header>
