--- a/components/ProPage.html
+++ b/components/ProPage.html
@@ -4,22 +4,22 @@
         <meta charset="utl-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0 " />
         <title>Projects Page</title>
-        <link href="ProjStyle.css" rel="stylesheet" />
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/ProjStyle.css" rel="stylesheet" />
+        <link rel="icon" href="../images/logo.png" />
     </head>
     <body>
-      <header>
-        <nav>
-            <a class="cat" href="Exp2Page.html">Experience</a>
-            <a class="cat" href="Pro2Page.html">Projects</a>
-            <a class="cat" href="Edu2Page.html">Education</a>
-            <a class="cat" href="Skills2Page.html">Skills</a>
-            <a class="cat" href="Hob2Page.html">Hobbies</a>
-            <a class="cat" href="Ach2Page.html">Achievements</a>
-        </nav>
-      </header>
-      <main>
-        <h1 align="center"><span>Projects</span></h1>
+        <header>
+          <nav>
+            <a class="cat" href="ExpPage.html">Experience</a>
+            <a class="cat" href="ProPage.html">Projects</a>
+            <a class="cat" href="EduPage.html">Education</a>
+            <a class="cat" href="SkillsPage.html">Skills</a>
+            <a class="cat" href="HobPage.html">Hobbies</a>
+            <a class="cat" href="AchPage.html">Achievements</a>
+          </nav>
+        </header>
+          <main>
+            <h1 align="center"><span>Projects</span></h1>
             <h2><span>Facial Expression recognition system <small>(Academic Major-Project 2023)</small></span></h2>
                 <ul>
                     <li><b>Languages :</b> Python</li><br>
@@ -47,7 +47,6 @@
                 <ul>
                     <li><b>Languages :</b> HTML & CSS</li><br>
                     <li><b>Hosting Platform :</b> Google Drive</li><br>
-                    <li><b>Link :</b><a class="link" href="https://bit.ly/d1gopalakrishna"> Gopala Krishna D | Personal Website </a> </li><br>
                     <li><b>Description :</b> This project is a challenge taken up to develop a project only in HTML and CSS. The hosting of it is also free of cost
                         from Google Drive. I have created this to be an informal website version of my resume. </li><br>
                 </ul>
@@ -61,13 +60,14 @@
                     how else to save best.
                 </span></p> -->
                 <br>
-            <br><br>
-            <br><br>
-            <br><br>
-            <br><br>
-            <button type="button"><a href="Home.html">HOME PAGE</a></button>
-            <br><br><br>
-            <br><br>
-        </main>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <button type="button"><a href="Pro2Page.html" target="_blank">FULL SCREEN</a></button>
+                <br>
+                <br><br>
+                <br><br>
+          </main>
     </body>
 </html>
