--- a/components/Edu2Page.html
+++ b/components/Edu2Page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link href="EduStyle.css" rel="stylesheet"/>
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/EduStyle.css" rel="stylesheet"/>
+        <link rel="icon" href="../images/logo.png" />
         <meta charset="utl-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Education Details </title>
@@ -62,7 +62,7 @@
             </ul>
             <br><br><br>
             </div>
-        <button type="button"><a href="Home.html">HOME PAGE</a></button>
+        <button type="button"><a href="../Home.html">HOME PAGE</a></button>
        </div>
       </main>
     </body>
