--- a/components/ExpPage.html
+++ b/components/ExpPage.html
@@ -4,8 +4,8 @@
       <meta charset="utl-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title> Experiences page </title>
-      <link href="ExpStyle.css" rel="stylesheet" />
-      <link rel="icon" href="images/logo.png" />
+      <link href="../css/ExpStyle.css" rel="stylesheet" />
+      <link rel="icon" href="../images/logo.png" />
   </head>
   <body>
     <header>
