--- a/components/Skills2Page.html
+++ b/components/Skills2Page.html
@@ -4,8 +4,8 @@
         <meta charset="utl-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Skills Page</title>
-        <link href="SkillStyle.css" rel="stylesheet"/>
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/SkillStyle.css" rel="stylesheet"/>
+        <link rel="icon" href="../images/logo.png" />
     </head>
     <body>
       <header>
@@ -56,7 +56,7 @@
             <br><br>
             <br><br>
             <br>
-      <button type="button"><a href="Home.html">HOME PAGE</a></button>
+      <button type="button"><a href="../Home.html">HOME PAGE</a></button>
       </main>
     </body>
 </html>
