--- a/components/SkillsPage.html
+++ b/components/SkillsPage.html
@@ -4,8 +4,8 @@
         <meta charset="utl-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Skills Page</title>
-        <link href="SkillStyle.css" rel="stylesheet"/>
-        <link rel="icon" href="images/logo.png" />
+        <link href="../css/SkillStyle.css" rel="stylesheet"/>
+        <link rel="icon" href="../images/logo.png" />
     </head>
     <body>
       <header>
