--- a/css/ExpStyle.css
+++ b/css/ExpStyle.css
@@ -5,6 +5,7 @@ a{
 }
 
 header{
+    color:black;
     text-align: center;
 }
 
@@ -15,39 +16,41 @@ header{
 }
 
 body{
-    background-color: #d84a05;
+    background-color: #051923;
 }
 
-main{
-    font-family:sans-serif;
-    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(images/achievements.jpg);
-    background-size:cover;
-    background-position-y: center;
-    background-position-x: center;
-    padding-top: 20px;
-    margin-top: 1cm;
-    padding:20px;
+.exp{
+    font-size:xx-large;
 }
 
-h1 span{
-    color: white;
+h2 span, p span{
     background-color: rgba(0,0,0,0.5);
-    margin-top: 20px;
+}
+
+h2{
     font-size: 0.5in;
 }
 
-p span, h4 span{
-    background-color: rgba(225,225,225,0.5);
+main{
+    color: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.65)) ,  url(../images/experience.jpg);
+    background-position-x: center;
+    background-repeat: repeat-y;
+    background-size: cover;
+    margin-top: 1cm;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-h4{
-    font-size:large;
-}
-
-hr{
-    width:95%;
-    height: 5px;
-    background-color: white;    
+.info{
+    padding-top: 8%;;
+    font-size: large;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding-left : 75px;
+    padding-right : 75px;
+    padding-bottom: 75px;
 }
 
 button {
