--- a/css/HobStyle.css
+++ b/css/HobStyle.css
@@ -5,7 +5,6 @@ a{
 }
 
 header{
-    color:black;
     text-align: center;
 }
 
@@ -16,39 +15,25 @@ header{
 }
 
 body{
-    background-color: #6b8ab1;
-}
-
-.link{
-    color: white;
-    text-decoration: dotted;
+    background-color: #41488e;
 }
 
 main{
-    background-image:linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url(images/project.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(../images/hobbies.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position-y: center;
-    background-position-x: center;
-    font-size:large;
-    font-family: sans-serif;
     padding-left: 20px;
-    padding-right: 20px;
+    font-family: sans-serif;
 }
 
-h1 span, h2 span, p span, ul{
+h1 span, p span{
     color: white;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.6);
 }
 
 h1{
     font-size: 0.5in;
-}
-
-hr{
-    width: 100%;
-    height: 2px;
-    background-color: white;;
+    padding-top: 20px;
+    font-weight: 700;
 }
 
 button {
