--- a/css/ProjStyle.css
+++ b/css/ProjStyle.css
@@ -5,42 +5,50 @@ a{
 }
 
 header{
+    color:black;
     text-align: center;
 }
 
 .cat{
-    text-align: center;
     background-color: burlywood;
     font-style: italic;
     display: inline-block;
 }
 
 body{
-    background-color: #27213c;
+    background-color: #6b8ab1;
+}
+
+.link{
+    color: white;
+    text-decoration: dotted;
 }
 
 main{
-    color: white;
-    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(images/skills.jpg);
-    background-repeat: no-repeat;
+    background-image:linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url(../images/project.jpg);
     background-size: cover;
-    margin-top: 2cm;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: center;
+    font-size:large;
+    font-family: sans-serif;
     padding-left: 20px;
+    padding-right: 20px;
 }
 
-.tit{
-    font-size:x-large;
-}
-
-.info{
-    padding-top: 8%;
-    font-size: large;
-    text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+h1 span, h2 span, p span, ul{
     color: white;
-    padding-left : 75px;
-    padding-right : 75px;
-    padding-bottom: 75px;
+    background-color: rgba(0,0,0,0.5);
+}
+
+h1{
+    font-size: 0.5in;
+}
+
+hr{
+    width: 100%;
+    height: 2px;
+    background-color: white;;
 }
 
 button {
