--- a/css/SkillStyle.css
+++ b/css/SkillStyle.css
@@ -5,45 +5,35 @@ a{
 }
 
 header{
-    color:black;
     text-align: center;
 }
 
 .cat{
+    text-align: center;
     background-color: burlywood;
     font-style: italic;
     display: inline-block;
 }
 
 body{
-    background-color: #051923;
-}
-
-.exp{
-    font-size:xx-large;
-}
-
-h2 span, p span{
-    background-color: rgba(0,0,0,0.5);
-}
-
-h2{
-    font-size: 0.5in;
+    background-color: #27213c;
 }
 
 main{
     color: white;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.65)) ,  url(images/experience.jpg);
-    background-position-x: center;
-    background-repeat: repeat-y;
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../images/skills.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 1cm;
+    margin-top: 2cm;
     padding-left: 20px;
-    padding-right: 20px;
+}
+
+.tit{
+    font-size:x-large;
 }
 
 .info{
-    padding-top: 8%;;
+    padding-top: 8%;
     font-size: large;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
