Home renamed as index

--- a/components/Edu2Page.html
+++ b/components/Edu2Page.html
@@ -62,7 +62,7 @@
             </ul>
             <br><br><br>
             </div>
-        <button type="button"><a href="../Home.html">HOME PAGE</a></button>
+        <button type="button"><a href="../index.html">HOME PAGE</a></button>
        </div>
       </main>
     </body>
