--- a/components/Exp2Page.html
+++ b/components/Exp2Page.html
@@ -54,7 +54,7 @@
             <br><br>
             <br><br>
             <button type="button">
-              <a href="../Home.html">HOME PAGE</a>
+              <a href="../index.html">HOME PAGE</a>
             </button>
         </div>
       </main>
