--- a/components/Ach2Page.html
+++ b/components/Ach2Page.html
@@ -42,7 +42,7 @@
             <br><br>
             <br><br>
             <br>
-        <button type="button"><a href="../Home.html">HOME PAGE</button>
+        <button type="button"><a href="../index.html">HOME PAGE</button>
           <br><br>
           <br><br>
           <br><br>
