--- a/components/Hob2Page.html
+++ b/components/Hob2Page.html
@@ -34,7 +34,7 @@
                 <br><br>
                 <br><br>
                 <br><br>
-                <button type="button"><a href="../Home.html">HOME PAGE</a></button>
+                <button type="button"><a href="../index.html">HOME PAGE</a></button>
                 <br> <br><br>
                 <br><br>
       </main>
