--- a/components/Pro2Page.html
+++ b/components/Pro2Page.html
@@ -65,7 +65,7 @@
             <br><br>
             <br><br>
             <br><br>
-            <button type="button"><a href="../Home.html">HOME PAGE</a></button>
+            <button type="button"><a href="../index.html">HOME PAGE</a></button>
             <br><br><br>
             <br><br>
         </main>
